# libcurl

./: README.md  build.gradle  settings.gradle
.github/workflows/: main.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/dev/ron/: MainActivity.java  NativeApi.java
app/src/main/res/values/: strings.xml
